examples/invalid/syntax-error.ra
fn myFunction(v: integer): void {
  f = 1
}

func main(): void {
  myFunction(1);
}
